--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  talker_flutter: ^3.3.1
+  talker_dio_logger: ^2.3.0
+  talker_bloc_logger: ^2.2.0
+  firebase_core: ^2.15.1
 
 dev_dependencies:
   flutter_test:
