--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,18 @@ dependencies:
   talker_dio_logger: ^2.3.0
   talker_bloc_logger: ^2.2.0
   firebase_core: ^2.15.1
+  json_annotation: ^4.8.1
+  hive_flutter: ^1.1.0
+  auto_route: ^7.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
+  hive_generator: ^2.0.1
+  auto_route_generator: ^7.3.1 
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
